# minicpp

./: CMakeLists.txt
CMake/: default.cmake  macro.cmake  platform.cmake
lib/game/: Life.cpp
lib/game/include/: Life.hpp
src/: life.cpp  record.cpp
